--- a/source/Muki/build.properties
+++ b/source/Muki/build.properties
@@ -1,5 +1,5 @@
 ###
-# Parameters used by the Ant script during jar creation
+# Parameters used by the Ant
 ## 
 version.number=1.0
 jar.name=muki-generator-${version.number}.jar
