--- a/source/Muki/build.properties
+++ b/source/Muki/build.properties
@@ -1,6 +1,6 @@
 ###
-# Parameters used by the Ant
+# Parameters used by the Ant script
 ## 
-version.number=1.2
+version.number=1.3
 jar.name=muki-generator-${version.number}.jar
 
